<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/scrollViewBackgroundColor"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/userPhotoImage"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ezio" />

    <TextView
        android:id="@+id/textView2"
        style="@style/imageDefault"

        android:layout_marginTop="8dp"
        android:text="@string/user_name"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/userPhotoImage"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/Rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="3"
        android:stepSize="0.1"
        app:layout_constraintStart_toEndOf="@+id/userPhotoImage"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="33dp"
        android:text="@string/date"
        app:layout_constraintStart_toEndOf="@+id/Rating"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="12dp"
        android:text="@string/fair"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Rating" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="274dp"
        android:layout_height="73dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="4dp"
        android:text="@string/review"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>